# kyto-auth

./: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
src/: factories.py
src/adapters/: repository.py
src/auth/: factories.py
src/auth/adapters/: repository.py
src/auth/domain/: base.py  commands.py  users.py
src/auth/entrypoints/fastapi_app/: app.py  deps.py  exception_handlers.py
src/auth/entrypoints/fastapi_app/v1/: routers.py  users.py
src/auth/service_player/: handlers.py  messagebus.py  unit_of_work.py
src/domain/: commands.py  users.py
src/entrypoints/fastapi_app/: app.py  deps.py  exception_handlers.py  responses.py
src/entrypoints/fastapi_app/v1/: endpoints.py  models.py  routers.py  users.py
src/service_player/: exceptions.py  handlers.py  messagebus.py  unit_of_work.py
tests/e2e/test_api_v1/: api_client.py  test_api.py
tests/integration/: test_uow.py
