[tool.poetry]
name = "kyto-base-service"
version = "0.1.0"
description = ""
authors = ["Name Surname <author@example.com>"]
readme = "README.md"
packages = [
    {include = "*", from = "src"},
    {include = "*", from = "tests"},
]

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.5.0"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
isort = "^5.12.0"
black = "^23.9.1"
mypy = "^1.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
