[tool.poetry]
name = "auth"
version = "0.1.0"
description = "Kyto service"
authors = ["Name Surname <author@example.com>"]
readme = "README.md"
packages = [
    {include = "src", from = "."},
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
gunicorn = "^21.2.0"
bcrypt = "^4.0.1"
kytool = "^0.2.0"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
isort = "^5.12.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"
black = "^23.9.1"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
